--- a/views/finances.html
+++ b/views/finances.html
@@ -20,7 +20,10 @@
           <a href="/views/dashboard.html">Home</a>
         </li>
         <li class="hover:underline">
-          <a href="/views/finances.html">Gráficos</a>
+          <a href="/views/finances.html">Movimentações</a>
+        </li>
+        <li class="hover:underline">
+          <a href="/views/settings.html">Configurações</a>
         </li>
         <li class="hover:underline"><a href="../index.html">Sair</a></li>
       </ul>
@@ -28,7 +31,7 @@
   </header>
   <main class="px-5 max-w-7xl mx-auto py-3">
     <h2 class="font-medium text-3xl my-5">Inserir nova movimentação</h2>
-    <form class="p-10 border dark:border-zinc-600 rounded-md w-8/12 flex flex-col">
+    <form class="p-10 border dark:border-zinc-600 rounded-md w-full lg:w-8/12 flex flex-col">
       <div class="mb-5">
         <label for="type" class="block mb-2 text-md font-medium text-gray-900 dark:text-white">
           Selecione o tipo de movimentação
