--- a/views/signup.html
+++ b/views/signup.html
@@ -15,7 +15,7 @@
   <!-- My CSS -->
   <link rel="stylesheet" href="../assets/css/globals.css">
   <!-- My JS -->
-  <script type="module" src="./assets/js/index.js" defer></script>
+  <script type="module" src="../assets/js/finances.js" defer></script>
 </head>
 
 <body
@@ -26,6 +26,11 @@
       <div class="flex flex-col gap-3 mb-3">
         <label for="name">Nome</label>
         <input type="text" name="name" id="name" placeholder="Digite seu nome completo"
+          class="rounded-sm dark:text-black px-3 h-10 hover:bg-zinc-200" />
+      </div>
+      <div class="flex flex-col gap-3 mb-3">
+        <label for="age">Idade</label>
+        <input type="number" name="age" id="age" placeholder="Digite sua idade"
           class="rounded-sm dark:text-black px-3 h-10 hover:bg-zinc-200" />
       </div>
       <div class="flex flex-col gap-3 mb-3">
@@ -54,7 +59,7 @@
         </a>
       </p>
     </form>
-    <img class="w-6/12 lg:w-4/12 h-64 lg:h-80" src="../assets/img/signup_img.svg" alt="" />
+    <img class="hidden lg:block w-6/12 lg:w-4/12 h-64 lg:h-80" src="../assets/img/signup_img.svg" alt="" />
   </div>
 </body>
 
