feat: create sigin and signup api integration

--- a/views/signup.html
+++ b/views/signup.html
@@ -15,7 +15,7 @@
   <!-- My CSS -->
   <link rel="stylesheet" href="../assets/css/globals.css">
   <!-- My JS -->
-  <script type="module" src="../assets/js/finances.js" defer></script>
+  <script type="module" src="../assets/js/signup.js" defer></script>
 </head>
 
 <body
@@ -49,7 +49,7 @@
           class="rounded-sm dark:text-black px-3 h-10 hover:bg-zinc-200" />
       </div>
       <button class="rounded px-4 bg-sky-600 hover:bg-sky-700 duration-300 h-10 text-white mb-5" type="submit"
-        id="login-btn">
+        id="register-btn">
         Registrar-se
       </button>
 
