feat: add logout function

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -31,8 +31,8 @@
         <li class="hover:underline">
           <a href="/views/settings.html">Configurações</a>
         </li>
-        <li class="hover:underline">
-          <a href="../index.html">Sair</a>
+        <li class="hover:underline cursor-pointer" id="logout-trigger">
+          <a>Sair</a>
         </li>
       </ul>
     </nav>
