--- a/views/finances.html
+++ b/views/finances.html
@@ -25,7 +25,9 @@
         <li class="hover:underline">
           <a href="/views/settings.html">Configurações</a>
         </li>
-        <li class="hover:underline"><a href="../index.html">Sair</a></li>
+        <li class="hover:underline cursor-pointer" id="logout-trigger">
+          <a>Sair</a>
+        </li>
       </ul>
     </nav>
   </header>
