--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -7,6 +7,7 @@
   <title>Dashboard | App</title>
 
   <!-- Libs -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
@@ -44,7 +45,8 @@
         <span class="font-bold" id="user-name">Elon Musk</span>.
       </h2>
       <a class="rounded px-4 bg-sky-600 hover:bg-sky-800 duration-300 py-2 text-white self-end lg:self-auto"
-        type="submit" id="login-btn" href="./finances.html">Adicione movimentações
+        href="./finances.html">
+        <i class="bi bi-plus-circle-fill"></i> Adicione movimentações
       </a>
     </div>
     <div>
