feat: create user service

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -22,7 +22,7 @@
   <header class="bg-sky-200 dark:bg-sky-600">
     <nav class="flex justify-between px-10 h-24 max-w-7xl mx-auto items-center dark:text-white">
       <img src="../assets/img/money-svgrepo-com.svg" class="h-12 rounded-full" alt="" id="logo" />
-      <ul class="flex gap-3">
+      <ul class="flex gap-5">
         <li class="hover:underline">
           <a href="/views/dashboard.html">Home</a>
         </li>
@@ -30,7 +30,7 @@
           <a href="/views/finances.html">Movimentações</a>
         </li>
         <li class="hover:underline">
-          <a href="/views/settings.html">Configurações</a>
+          <a href="/views/settings.html">Perfil</a>
         </li>
         <li class="hover:underline cursor-pointer" id="logout-trigger">
           <a>Sair</a>
