--- a/views/settings.html
+++ b/views/settings.html
@@ -35,7 +35,8 @@
       </ul>
     </nav>
 
-    <div id="menu-mobile" class="absolute top-0 -right-1/2 h-screen w-1/2 bg-sky-200 dark:bg-zinc-800 duration-300">
+    <div id="menu-mobile"
+      class="absolute hidden top-0 -right-1/2 h-screen w-1/2 bg-sky-200 dark:bg-zinc-800 duration-300">
       <div class="flex flex-col justify-center gap-10 relative">
         <img class="block lg:hidden w-10 self-end my-8 mr-10" src="../assets/img/close_white_36dp.svg"
           id="close-menu-trigger">
