--- a/views/finances.html
+++ b/views/finances.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Finanças | APP</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="../assets/css/output.css">
   <!-- My CSS -->
   <link rel="stylesheet" href="../assets/css/globals.css">
   <script type="module" src="../assets/js/finances.js" defer></script>
