--- a/views/signup.html
+++ b/views/signup.html
@@ -11,10 +11,11 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="../assets/css/output.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <!-- My CSS -->
   <link rel="stylesheet" href="../assets/css/globals.css">
+  <link rel="stylesheet" href="../assets/css/output.css">
   <!-- My JS -->
   <script type="module" src="../assets/js/signup.js" defer></script>
 </head>
