--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -18,7 +18,7 @@
   <script type="module" src="../assets/js/dashboard.js" defer></script>
 </head>
 
-<body class="bg-zinc-100 dark:bg-zinc-900 dark:text-white ">
+<body class="bg-zinc-100 dark:bg-zinc-900 dark:text-white overflow-x-hidden">
   <header class="bg-sky-200 dark:bg-sky-600">
     <nav class="flex justify-between px-10 h-24 max-w-7xl mx-auto items-center dark:text-white">
       <img src="../assets/img/money-svgrepo-com.svg" class="h-12 rounded-full" alt="" id="logo" />
@@ -41,7 +41,7 @@
     </nav>
 
     <div id="menu-mobile"
-      class="absolute hidden top-0 -right-1/2 h-screen w-1/2 bg-sky-200  dark:bg-zinc-800 duration-300">
+      class="absolute hidden top-0 right-0 h-screen w-1/2 bg-sky-200  dark:bg-zinc-800 duration-300">
       <div class="flex flex-col justify-center gap-10 relative">
         <img class="block lg:hidden w-10 self-end my-8 mr-10" src="../assets/img/close_white_36dp.svg"
           id="close-menu-trigger">
@@ -66,7 +66,7 @@
     <div class="flex flex-col gap-5 lg:flex-row lg:justify-between items-center lg:h-24 mb-10">
       <h2 class="font-medium text-xl self-start lg:self-auto">
         <span id="greeting">Olá</span>,
-        <span class="font-bold" id="user-name">Elon Musk</span>.
+        <span class="font-bold" id="user-name">Guest</span>.
       </h2>
       <a class="rounded px-4 bg-sky-600 hover:bg-sky-800 duration-300 py-2 text-white self-end lg:self-auto"
         href="./finances.html">
