--- a/views/settings.html
+++ b/views/settings.html
@@ -58,7 +58,7 @@
     </div>
   </header>
   <main class="px-5 max-w-7xl mx-auto py-3">
-    <div class="flex justify-between items-center">
+    <div class="flex flex-col gap-5 md:flex-row justify-between items-center">
       <div class="flex gap-5 items-center mt-5">
         <div class="w-20 h-20 rounded-full bg-emerald-500 flex justify-center items-center font-bold text-2xl"
           id="profile-icon">
@@ -68,21 +68,10 @@
           Nikolas Matheus de Menezes
         </p>
       </div>
-      <p class="font-medium text-xl">Saldo <span class="text-emerald-500">R$ 1000,03</span></p>
+      <p class="font-medium text-xl self-end lg:self-auto">Saldo <span class="text-emerald-500">R$ 1000,03</span></p>
     </div>
 
-    <div class="my-5 w-1/2">
-      <label for="theme-select" class="block mb-2 text-md font-medium text-gray-900 dark:text-white">
-        Escolha o tema do aplicativo
-      </label>
-      <select id="theme-select"
-        class="bg-gray-50 border border-gray-300 text-gray-900 text-md rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2">
-        <option selected disabled>Selecione ...</option>
-        <option value="system"><i class="bi bi-laptop-fill"></i> Sistema</option>
-        <option value="light"><i class="bi bi-brightness-high-fill"></i> Claro</option>
-        <option value="dark"><i class="bi bi-moon-fill"></i> Escuro</option>
-      </select>
-    </div>
+
   </main>
 </body>
 
