--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -679,6 +679,10 @@ video {
   height: 100vh;
 }
 
+.h-14 {
+  height: 3.5rem;
+}
+
 .max-h-72 {
   max-height: 18rem;
 }
@@ -714,6 +718,10 @@ video {
 
 .w-24 {
   width: 6rem;
+}
+
+.w-14 {
+  width: 3.5rem;
 }
 
 .max-w-7xl {
@@ -772,8 +780,16 @@ video {
   align-self: flex-end;
 }
 
+.self-center {
+  align-self: center;
+}
+
 .overflow-x-hidden {
   overflow-x: hidden;
+}
+
+.text-pretty {
+  text-wrap: pretty;
 }
 
 .rounded {
@@ -909,6 +925,11 @@ video {
   line-height: 1.75rem;
 }
 
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -919,6 +940,10 @@ video {
 
 .font-normal {
   font-weight: 400;
+}
+
+.uppercase {
+  text-transform: uppercase;
 }
 
 .text-emerald-500 {
@@ -1034,6 +1059,10 @@ input[type=number] {
     height: 20rem;
   }
 
+  .lg\:h-20 {
+    height: 5rem;
+  }
+
   .lg\:w-2\/6 {
     width: 33.333333%;
   }
@@ -1050,6 +1079,10 @@ input[type=number] {
     width: 66.666667%;
   }
 
+  .lg\:w-20 {
+    width: 5rem;
+  }
+
   .lg\:flex-row {
     flex-direction: row;
   }
@@ -1064,6 +1097,11 @@ input[type=number] {
 
   .lg\:self-auto {
     align-self: auto;
+  }
+
+  .lg\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 }
 
@@ -1101,5 +1139,15 @@ input[type=number] {
   .dark\:text-white {
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity));
+  }
+
+  .dark\:text-zinc-300 {
+    --tw-text-opacity: 1;
+    color: rgb(212 212 216 / var(--tw-text-opacity));
+  }
+
+  .dark\:text-zinc-400 {
+    --tw-text-opacity: 1;
+    color: rgb(161 161 170 / var(--tw-text-opacity));
   }
 }
