--- a/views/settings.html
+++ b/views/settings.html
@@ -59,16 +59,22 @@
   </header>
   <main class="px-5 max-w-7xl mx-auto py-3">
     <div class="flex flex-col gap-5 md:flex-row justify-between items-center">
-      <div class="flex gap-5 items-center mt-5">
-        <div class="w-20 h-20 rounded-full bg-emerald-500 flex justify-center items-center font-bold text-2xl"
+      <div class="flex gap-3 items-center mt-5">
+        <div
+          class="w-14 h-14 lg:w-20 lg:h-20 rounded-full bg-emerald-500 flex justify-center items-center font-bold text-2xl uppercase"
           id="profile-icon">
-          NM
+          G
         </div>
-        <p class="font-medium text-xl">
-          Nikolas Matheus de Menezes
-        </p>
+        <div class="flex flex-col gap-3">
+          <p class="font-medium text-lg lg:text-xl" id="user-name">
+            Guest
+          </p>
+          <p class="font-medium text-md dark:text-zinc-400 text-pretty" id="user-email">
+            test@example.com
+          </p>
+        </div>
       </div>
-      <p class="font-medium text-xl self-end lg:self-auto">Saldo <span class="text-emerald-500">R$ 1000,03</span></p>
+      <p class="font-medium text-xl self-center lg:self-auto">Saldo <span class="text-emerald-500">R$ 1000,03</span></p>
     </div>
 
 
