--- a/views/settings.html
+++ b/views/settings.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Finanças | APP</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   <!-- My CSS -->
   <link rel="stylesheet" href="../assets/css/globals.css">
   <link rel="stylesheet" href="../assets/css/output.css">
@@ -58,7 +60,7 @@
     </div>
   </header>
   <main class="px-5 max-w-7xl mx-auto py-3">
-    <div class="flex flex-col gap-5 md:flex-row justify-between items-center">
+    <div class="flex flex-col gap-5 md:flex-row justify-between items-center mb-5">
       <div class="flex gap-3 items-center mt-5">
         <div
           class="w-14 h-14 lg:w-20 lg:h-20 rounded-full bg-emerald-500 flex justify-center items-center font-bold text-2xl uppercase"
@@ -77,7 +79,51 @@
       <p class="font-medium text-xl self-center lg:self-auto">Saldo <span class="text-emerald-500">R$ 1000,03</span></p>
     </div>
 
-
+    <div class="flex gap-5">
+      <aside class="lg:w-3/12 p-5">
+        <ul class="flex flex-col gap-5">
+          <li class="bg-sky-600 h-14 px-5 rounded-md flex items-center hover:cursor-pointer text-md font-medium">Meu
+            Cadastro</li>
+          <li class="h-14 px-5 rounded-md flex items-center hover:cursor-pointer text-md font-medium">Cartões
+          </li>
+          <li class="h-14 px-5 rounded-md flex items-center hover:cursor-pointer text-md font-medium"> Contas
+            Bancárias</li>
+        </ul>
+      </aside>
+      <section class="lg:w-9/12 border-2 border-zinc-200 p-5">
+        <form class="flex flex-col">
+          <div class="flex gap-5">
+            <div class="flex flex-col gap-3 mb-5">
+              <label for="name"><i class="bi bi-person-circle"></i> Nome</label>
+              <input type="text" name="name" id="name-input"
+                class="rounded-lg dark:text-black px-3 h-10 hover:bg-zinc-200 outline-none" />
+            </div>
+            <div class="flex flex-col gap-3 mb-5">
+              <label for="age"><i class="bi bi-cake"></i> Idade</label>
+              <input type="number" name="age" id="age-input"
+                class="rounded-lg dark:text-black px-3 h-10 hover:bg-zinc-200 outline-none" />
+            </div>
+          </div>
+          <div class="flex gap-5">
+            <div class="flex flex-col gap-3 mb-5">
+              <label for="email"><i class="bi bi-envelope"></i> Email</label>
+              <input type="text" name="email" id="email-input"
+                class="rounded-lg dark:text-black px-3 h-10 hover:bg-zinc-200 outline-none" />
+            </div>
+          </div>
+          <div class="self-end">
+            <button class="rounded px-4 bg-red-600 hover:bg-red-700 duration-300 h-10 text-white mb-5" type="button"
+              id="delete-account-btn">
+              Deletar conta
+            </button>
+            <button class="rounded px-4 bg-emerald-600 hover:bg-emerald-700 duration-300 h-10 text-white mb-5"
+              type="button" id="save-modification-btn">
+              Salvar alterações
+            </button>
+          </div>
+        </form>
+      </section>
+    </div>
   </main>
 </body>
 
