feat: finish settings view tabs config

--- a/views/settings.html
+++ b/views/settings.html
@@ -84,7 +84,7 @@
         <ul class="flex flex-col gap-5">
           <li
             class="navigation-item bg-sky-600 h-14 px-5 rounded-md flex items-center hover:cursor-pointer text-md font-medium"
-            content-id="my-registration">
+            content-id="my_registration">
             Meu Cadastro
           </li>
           <li class="navigation-item h-14 px-5 rounded-md flex items-center hover:cursor-pointer text-md font-medium"
@@ -92,12 +92,12 @@
             Cartões
           </li>
           <li class="navigation-item h-14 px-5 rounded-md flex items-center hover:cursor-pointer text-md font-medium"
-            content-id="bank-accounts">
+            content-id="bank_accounts">
             Contas Bancárias
           </li>
         </ul>
       </aside>
-      <section class="lg:w-9/12 border-2 border-zinc-200 p-5" id="my-registration">
+      <section class="lg:w-9/12 p-5" id="my_registration">
         <form class="flex flex-col">
           <div class="flex gap-5">
             <div class="flex flex-col gap-3 mb-5">
@@ -130,8 +130,12 @@
           </div>
         </form>
       </section>
-      <section class="lg:w-9/12 border-2 border-zinc-200 p-5 hidden" id="cards"></section>
-      <section class="lg:w-9/12 border-2 border-zinc-200 p-5 hidden" id="bank-accounts"></section>
+      <section class="lg:w-9/12 p-5 hidden" id="cards">
+        cards section
+      </section>
+      <section class="lg:w-9/12 p-5 hidden" id="bank_accounts">
+        bank accounts
+      </section>
     </div>
   </main>
 </body>
