feat: delete user

--- a/views/settings.html
+++ b/views/settings.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="../assets/css/output.css">
   <!-- My js -->
   <script type="module" src="../assets/js/settings.js" defer></script>
+  <script type="module" src="../assets/js/settings/my-registration.js" defer></script>
 </head>
 
 <body class="bg-zinc-100 dark:bg-zinc-900 dark:text-white">
