--- a/views/finances.html
+++ b/views/finances.html
@@ -75,9 +75,9 @@
           <label for="value" class="block mb-2 text-md font-medium text-gray-900 dark:text-white">
             Valor
           </label>
-          <input type="number" id="value"
+          <input type="text" id="value"
             class="bg-gray-50 border border-gray-300 text-gray-900 text-md rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-            placeholder="10000" required />
+            placeholder="R$ 100,00" required />
         </div>
         <label class="inline-flex items-center cursor-pointer">
           <input type="checkbox" value="" class="sr-only peer">
@@ -107,11 +107,11 @@
         </div>
         <div class="flex flex-col gap-3">
           <label for="type" class="block mb-2 text-md font-medium text-gray-900 dark:text-white">
-            Selecione o tipo de movimentação
+            Selecione a categoria
           </label>
           <select id="category-select" disabled
             class="bg-gray-50 border border-gray-300 text-gray-900 text-md rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2">
-            <option selected>Selecione a categoria...</option>
+            <option selected>Selecione ..</option>
           </select>
         </div>
 
