--- a/views/settings.html
+++ b/views/settings.html
@@ -78,7 +78,7 @@
           </p>
         </div>
       </div>
-      <p class="font-medium text-xl self-center lg:self-auto">Saldo <span class="text-emerald-500">R$ 1000,03</span></p>
+      <p class="font-medium text-xl self-center lg:self-auto">Saldo <span id="balance-span">R$ 0,00</span></p>
     </div>
 
     <div class="flex gap-5">
@@ -135,8 +135,17 @@
       <section class="lg:w-9/12 p-5 hidden" id="cards">
         cards section
       </section>
-      <section class="lg:w-9/12 p-5 hidden" id="bank_accounts">
-        bank accounts
+      <section class="lg:w-9/12 p-5 hidden flex-col" id="bank_accounts">
+
+        <button class="rounded px-4 bg-emerald-600 hover:bg-emerald-700 duration-300 h-10 text-white mb-5 self-end">
+          Adicionar Conta
+        </button>
+
+        <h3 class="text-2xl font-medium my-5">Minhas contas bancárias</h3>
+        <div class="flex flex-col gap-3" id="accounts-container">
+
+        </div>
+
       </section>
     </div>
 
