--- a/views/settings.html
+++ b/views/settings.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Finanças | APP</title>
+  <title>Perfil | APP</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
@@ -89,7 +89,7 @@
             content-id="my_registration">
             Meu Cadastro
           </li>
-          <li class="navigation-item h-14 px-5 rounded-md flex items-center hover:cursor-pointer text-md font-medium"
+          <li class="hidden navigation-item h-14 px-5 rounded-md flex items-center hover:cursor-pointer text-md font-medium"
             content-id="cards">
             Cartões
           </li>
@@ -137,7 +137,7 @@
       </section>
       <section class="lg:w-9/12 p-5 hidden flex-col" id="bank_accounts">
 
-        <button class="rounded px-4 bg-emerald-600 hover:bg-emerald-700 duration-300 h-10 text-white mb-5 self-end">
+        <button data-modal-target="create-account-modal" data-modal-toggle="create-account-modal" class="rounded px-4 bg-emerald-600 hover:bg-emerald-700 duration-300 h-10 text-white mb-5 self-end">
           Adicionar Conta
         </button>
 
@@ -185,6 +185,77 @@
       </div>
     </div>
   </div>
+
+  <div id="create-account-modal" tabindex="-1"
+    class="hidden overflow-y-auto overflow-x-hidden fixed inset-0 z-50 justify-center items-center">
+    <div class="absolute left-1/2 top-1/2 -translate-y-1/2 -translate-x-1/2 p-4 w-full max-w-md max-h-full">
+      <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+        <button type="button"
+          class="absolute top-3 end-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
+          data-modal-hide="create-account-modal">
+          <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+          </svg>
+          <span class="sr-only">Fechar</span>
+        </button>
+        <div class="p-4 md:p-5 text-center">
+          <h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">Insira as informações da básicas da conta</h3>
+          <form class="mb-3">
+            <div class="flex flex-col gap-3 mb-3 text-left">
+              <label for="account-name">Nome da conta</label>
+              <input type="text" name="account-name" id="account-name" placeholder="Digite o nome da conta"
+                class="rounded-md dark:text-black px-3 h-10 hover:bg-zinc-200" />
+            </div>
+            <div class="flex flex-col gap-3 mb-3 text-left">
+              <label for="balance">Saldo</label>
+              <input type="text" name="balance" id="balance" placeholder="Digite o saldo para esta conta"
+                class="rounded-md dark:text-black px-3 h-10 hover:bg-zinc-200" />
+            </div>
+          </form>
+  
+          <button data-modal-hide="create-account-modal" type="button" id="create-account-btn"
+            class="text-white bg-emerald-600 hover:bg-emerald-800 focus:ring-4 focus:outline-none focus:ring-emerald-300 dark:focus:ring-emerald-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
+            Criar conta
+          </button>
+          <button data-modal-hide="create-account-modal" type="button" id="create-account-btn"
+            class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
+            Não, Cancelar
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div id="update-account-modal" tabindex="-1"
+  class="hidden overflow-y-auto overflow-x-hidden fixed inset-0 z-50 justify-center items-center">
+  <div class="absolute left-1/2 top-1/2 -translate-y-1/2 -translate-x-1/2 p-4 w-full max-w-md max-h-full">
+    <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+      <button type="button"
+        class="absolute top-3 end-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
+        data-modal-hide="update-account-modal">
+        <span class="sr-only">Fechar</span>
+      </button>
+      <div class="p-4 md:p-5 text-center">
+        <h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">Insira as informações da básicas da conta</h3>
+        <form class="mb-3">
+          <div class="flex flex-col gap-3 mb-3 text-left">
+            <label for="account-name">Novo nome da conta</label>
+            <input type="text" name="account-name" id="account-name" placeholder="Digite o nome da conta"
+              class="rounded-md dark:text-black px-3 h-10 hover:bg-zinc-200" />
+          </div>
+        </form>
+
+        <button data-modal-hide="update-account-modal" type="button" id="update-account-btn"
+          class="text-white bg-emerald-600 hover:bg-emerald-800 focus:ring-4 focus:outline-none focus:ring-emerald-300 dark:focus:ring-emerald-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
+          Salvar
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+</main>
 
 
 </body>
