feat: create last transaction dashboard

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -83,49 +83,7 @@
         </div>
         <div class="md:w-full lg:w-8/12 w-80 h-full">
           <p class="text-2xl font-medium mb-5">Últimas movimentações</p>
-          <div class="rounded-md border-2 border-zinc-600 p-5 flex flex-col md:flex-row gap-5">
-            <div class="rounded-md border border-zinc-600 p-5 w-full lg:w-2/6">
-              <p class="font-medium mb-3">Tipo de transação</p>
-              <p class="mb-3">
-                Valor:
-                <span class="value font-medium text-emerald-500">+R$500,00</span>
-              </p>
-              <p class="mb-3 font-medium">
-                Descrição:
-                <span class="description font-normal">Ganhei no jogo do tigrinho</span>
-              </p>
-              <p class="mb-3">
-                Data: <span class="date font-medium">10/04/2024</span>
-              </p>
-            </div>
-            <div class="rounded-md border border-zinc-600 p-5 w-full lg:w-2/6">
-              <p class="mb-3">Tipo de transação</p>
-              <p class="mb-3">
-                Valor:
-                <span class="value font-medium text-emerald-500">+R$500,00</span>
-              </p>
-              <p class="mb-3 font-medium">
-                Descrição:
-                <span class="description font-normal">Ganhei no jogo do tigrinho</span>
-              </p>
-              <p class="mb-3">
-                Data: <span class="date font-medium">10/04/2024</span>
-              </p>
-            </div>
-            <div class="rounded-md border border-zinc-600 p-5 w-full lg:w-2/6">
-              <p class="mb-3">Tipo de transação</p>
-              <p class="mb-3">
-                Valor:
-                <span class="value font-medium text-red-500">-R$1000,00</span>
-              </p>
-              <p class="mb-3 font-medium">
-                Descrição:
-                <span class="description font-normal">Perdi no jogo do tigrinho</span>
-              </p>
-              <p class="mb-3">
-                Data: <span class="date font-medium">10/04/2024</span>
-              </p>
-            </div>
+          <div class="rounded-md  p-5 flex flex-col md:flex-row gap-5" id="transactions-container">
           </div>
         </div>
       </div>
