styles: increase width on mobile version

--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -804,6 +804,10 @@ video {
   width: 100%;
 }
 
+.w-10\/12 {
+  width: 83.333333%;
+}
+
 .max-w-7xl {
   max-width: 80rem;
 }
@@ -1385,6 +1389,10 @@ input[type=number] {
 @media (min-width: 768px) {
   .md\:w-full {
     width: 100%;
+  }
+
+  .md\:w-6\/12 {
+    width: 50%;
   }
 
   .md\:grid-cols-2 {
