--- a/views/signup.html
+++ b/views/signup.html
@@ -24,7 +24,7 @@
   class="bg-zinc-100 dark:bg-zinc-900 dark:text-white h-screen flex flex-col justify-center max-w-7xl mx-auto relative">
   <h1 class="text-4xl font-medium text-center my-5 pretty">Registrar-se</h1>
   <div class="flex justify-evenly gap-5 items-center flex-col-reverse lg:flex-row lg:gap-0">
-    <form class="relative w-6/12 lg:w-3/12 flex flex-col justify-center">
+    <form class="relative w-10/12 md:w-6/12 lg:w-3/12 flex flex-col justify-center">
       <div class="flex flex-col gap-3 mb-3">
         <label for="name">Nome</label>
         <input type="text" name="name" id="name" placeholder="Digite seu nome completo"
